# vc-client/copilot/swagger.json
@@ -171,6 +171,30 @@
         }
       }
     },
+    "/api/imported-transactions": {
+      "get": {
+        "tags": [
+          "Transactions",
+          "Api"
+        ],
+        "operationId": "SpendingAnalyzerEndpointsTransactionsGetAllImportedTransactionsEndpoint",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/SpendingAnalyzerEndpointsTransactionsContractsImportedTransactionResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/test": {
       "get": {
         "tags": [
@@ -765,6 +789,58 @@
             }
           }
         ]
+      },
+      "SpendingAnalyzerEndpointsTransactionsContractsImportedTransactionResponse": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "externalId": {
+            "type": "string"
+          },
+          "externalIdParsed": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "issueDate": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string"
+          },
+          "amount": {
+            "type": "string"
+          },
+          "currency": {
+            "type": "string"
+          },
+          "balance": {
+            "type": "string"
+          },
+          "issuerBankAccountNumber": {
+            "type": "string"
+          },
+          "issuerName": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "description2": {
+            "type": "string"
+          },
+          "accountId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "accountName": {
+            "type": "string"
+          }
+        }
       },
       "SpendingAnalyzerEndpointsTransactionsContractsUpdateTransactionRequest": {
         "allOf": [
